# shoggothStaring

./: .gitignore  .hlint.yaml  .markdownlint.yaml  LICENSE  README.md  deploy.sh  index.md  main.hs  review.py  shoggoth.cabal  shoggothstaring.cabal
posts/: 404.md  about.md  anki.md  durov_interview.md  index.md  me.md  ru.md  something-is-coming.md  srs.md
scripts/: deploy.sh  missing.sh  review.py  run.sh
static/: anki-heatmap.js  ebbinghaus.js  ebbinghaus2.js  heatmap.html  heatmap.json  pandoc-pygments.css  search.js  style.css
