cabal-version:      3.12
name:               shoggothstaring
version:            0.1.0.0
build-type:         Simple
license:            MIT

executable site
  main-is:          main.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , relude
                  , blaze-html
                  , blaze-markup
                  , text
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-name-shadowing
  default-language: Haskell2010
  mixins:   base hiding (Prelude)
          , relude (Relude as Prelude)
          , relude
  default-extensions: OverloadedStrings
                    , OverloadedRecordDot

